--- a/config/site.yml
+++ b/config/site.yml
@@ -1,7 +1,7 @@
 # The name of this site
 # This text displays in the back-office and
 # can be used in templates through the site.name global variable
-name: "devxdocs"
+name: "DevXDocs"
 
 # An array of domain aliases for the site
 # This option is for sites on multi-site engines
@@ -17,12 +17,12 @@ locales: [en]
 # This converts the server's time to the site's time zone in templates
 # The TimeZone class from Rail's ActiveSupport is used to interpret the string
 # Sample timezone strings: Tokyo, Beijing, Moscow, Cairo, Paris, Pacific Time (US & Canada)
-# timezone: Paris
+timezone: "Pacific Time (US & Canada)"
 
 # For SEO purposes, sites may wish to add a relevant string to the <title> tag
 # And include <meta type="keywords"> and <meta type="description">
 # For this purpose you can set values for these variables here
 # They can be accessed in templates through the site.seo_title, site.meta_keywords, and site.meta_description variables
-seo_title: devxdocs
-meta_keywords: "some meta keywords"
-meta_description: "some meta description"
+seo_title: Building Better Developer Documentation
+meta_keywords: "web developer documentation docs twilio"
+meta_description: "Developers are the lubrication to the world's engine, and documentation is their spinach. This metaphor sucks, and documentation shouldn't! "
